--- a/app/views/photos/upload.html.erb
+++ b/app/views/photos/upload.html.erb
@@ -1,1 +1,17 @@
-asdf
+<script>
+  $(function() {
+    $('#image_file').uploadify({
+      'uploader'  : '<%= image_path('/assets/uploadify.swf') %>',
+      'cancelImg' : '<%= image_path('/assets/cancel.png') %>',
+      'script'    : '<%= photos_path(:format => :json) %>',
+      'fileDataName': 'photo[photo]',
+      'scriptData': {
+          'authenticity_token': '<%= form_authenticity_token.html_safe %>',
+          'auth_token': '<%= current_user.authentication_token.html_safe %>'
+      },
+      'auto': true,
+      'multi': true
+    });
+  });
+</script>
+<div id="image_file"></div>
