--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,20 +1,15 @@
 <p id="notice"><%= notice %></p>
+<h1><%= @photo.name %></h1>
 
 <p>
-  <b>Name:</b>
-  <%= @photo.name %>
+  <%= link_to image_tag(@photo.photo.url(:medium)), @photo.photo.url %>
 </p>
 
 <p>
-  <b>Description:</b>
   <%= @photo.description %>
 </p>
 
-<p>
-  <b>Photo:</b>
-  <img src="<%= @photo.photo %>">
-</p>
 
-
-<%= link_to 'Edit', edit_photo_path(@photo) %> |
-<%= link_to 'Back', photos_path %>
+<% if user_signed_in? %>
+  <%= link_to 'Edit', edit_photo_path(@photo) %>
+<% end %>
