--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Phytos</a>
+          <a class="brand" href="/"><img src="http://bugsplat.info/bugsplat-2.png" style="height: 20px"></a>
           <div class="nav-collapse">
             <ul class="nav">
               <% if user_signed_in? %>
