Switch to local processing and unicorn

--- a/app/views/photos/upload.html.erb
+++ b/app/views/photos/upload.html.erb
@@ -13,5 +13,11 @@
       'multi': true
     });
   });
+
 </script>
-<div id="image_file"></div>
+<div class="row">
+  <div class="span6">
+    <h2>Upload</h2>
+    <div id="image_file"></div>
+  </div>
+</div>
