--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,12 +1,3 @@
 <h1>All Photos</h1>
 
-<div class="row">
-<ul class="thumbnails">
-<% @photos.each do |photo| %>
-  <li class="span2">
-    <%= link_to image_tag(photo.photo.url(:thumb)), photo, :class => 'thumbnail' %>
-  </li>
-<% end %>
-</ul>
-<%= will_paginate @photos, :renderer => BootstrapPagination::Rails %>
-</div>
+<%= render :partial => 'shared/photo_grid', :locals => {:photos => @photos} %>
